# twitch-ircv

./: Cargo.toml  README.md
examples/: badges_debug.rs  print_irc.rs
examples/common/: mod.rs
src/: args.rs  badges.rs  chat_logger.rs  lib.rs  logging.rs  main.rs  pretty_print.rs  setup.rs
tests/: irc_data_no_ping  logger_v0.rs
