[package]
name = "twitch-ircv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
chrono = "0.4.23"
colored = "2.0.0"
tokio = { version = "1.25.0", features = ["full"] }
twitch-irc = "5.0.1"

[dev-dependencies]
tempfile = "3.12.0"
